@@ -1,20 +1,19 @@
 program toposhadows
 !***********************************************************************
 ! calculates horizon for every location and every azimuth
-! written by Norbert Schorghofer 2010-2017
+! written by Norbert Schorghofer 2010-2018
 !***********************************************************************
   use filemanager, only : NSx,NSy,fileext,dx,dy,RMAX
   use allinterfaces
+  use newmultigrid
   implicit none
-  real(8), parameter :: pi=3.1415926535897932, d2r=pi/180.
-  integer i, j, k, ext, narg
+  real(8), parameter :: pi=3.1415926535897932
+  integer i, j, ext, narg, LACT
   integer, parameter :: naz=180      ! # of azimuths
-  real(8) h(NSx,NSy), azSun, smax(naz)
+  real(8) h(NSx,NSy), smax(naz)
   character(5) extc
   logical :: MULTIGRID = .false.
   real(8) RMG   ! distance of finest multigrid transition
-  real(8), allocatable :: h2(:,:), h3(:,:), h4(:,:), h5(:,:)  ! multigrid
-
   
   narg = COMMAND_ARGUMENT_COUNT()
   print *,'narg=',narg
@@ -33,22 +32,14 @@ program toposhadows
      print *,'# multgrid transition radius RMG =',RMG
      print *,'# grid levels =',ceiling(log(max(NSx*dx,NSy*dy)/RMG)/log(2.))
 
-     allocate(h2(NSx/2,NSy/2)); call downsample(NSx,NSy,h,h2)  
-     if (min(NSx,NSy)/4>10) then
-        allocate(h3(NSx/4,NSy/4)); call downsample(NSx/2,NSy/2,h2,h3)
-        if (min(NSx,NSy)/8>10) then
-           allocate(h4(NSx/8,NSy/8)); call downsample(NSx/4,NSy/4,h3,h4)
-           if (min(NSx,NSy)/16>10) then
-              allocate(h5(NSx/16,NSy/16)); call downsample(NSx/8,NSy/8,h4,h5)
-           endif
-        endif
-     endif
+     call downsample_all(h,5,LACT)
+     print *,'# levels allocated = ',LACT
   else
      print *,'# cutoff radius RMAX =',RMAX
   endif
   
   if (narg==0) then  ! serial implementation
-     print *,'...creating file horizons.dat...'
+     print *,'...creating file horizons.dat'
      open(unit=21,file='horizons.dat',status='unknown',action='write')
 
      do i=2,NSx-1
@@ -57,15 +48,8 @@ program toposhadows
            if (.not.MULTIGRID) then
               call findallhorizon(h,i,j,naz,smax)
            else
-              call findallhorizon_MG3(h,h2,h3,i,j,naz,smax,RMG)
+              call findallhorizon_MGR(h,i,j,naz,smax,RMG,5)
            endif
-           do k=1,naz
-              azSun = 360./real(naz)*(k-1)*d2r
-              !write(32,'(2(i4,1x),1x,f4.0,2x,f6.4)') i,j,azSun/d2r,smax(k)
-              !call findonehorizon(h,i,j,azSun,smax(k))
-              !write(31,'(2(i4,1x),1x,f4.0,2x,f6.4)') i,j,azSun/d2r,smax(k)
-              !call findonehorizon_wsort(h,i,j,azSun,smax(k),visibility)
-           end do
            !write(21,'(2(i4,1x),9999(1x,f6.4))') i,j,smax(:)
            write(21,'(2(i4,1x))',advance='no') i,j
            call compactoutput(21,smax,naz)
